src/test/deca/context/invalid/provided/override_method_return_type_error.deca
// Description:
//    Une méthode redéfinie n’a pas le même type de retour.
//
// Résultats:
//    override_method_return_type_error.deca:16:12: Le type de retour de la méthode getValue n'est pas compatible avec celui de la méthode redéfinie.
//
// Historique:
//    créé le 19/01/2025
class A {
    int getValue() {
        return 10;
    }
}

class B extends A {
    boolean getValue() { // Erreur : type de retour incompatible
        return true;
    }
}
